[UPDATE] Gym 검색 v2 개발 - 주변 체육관 조회와 일반 검색 통합 - 주변 체육관 조회를 거리 계산을 쿼리에서 처리 - 응답속도 약 3배 향상 - Test코드 수정